crates/elenchus-parser/tests/snapshots/errors__and_literal_missing.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        PREMISE g:\n            WHEN x a\n            AND\n            THEN x b\n        \"#)"
---
RESULT: 1 syntax error

[1/1] line 4, col 13
   |             AND
   |             ^^^
   problem : expected THEN to complete the WHEN ... THEN implication
   syntax  : THEN <literal>
   example : THEN motor uses fast_path
