crates/elenchus-parser/tests/snapshots/errors__close_with_an_unknown_kind.snap
---
source: crates/elenchus-parser/tests/errors.rs
assertion_line: 271
expression: "err(\"CLOSE deps SIDEWAYS\\n\")"
---
RESULT: 1 syntax error

CLOSE  (1 problem)
  syntax  : CLOSE <relation> TRANSITIVE
  example : CLOSE depends_on TRANSITIVE
    line 1, col 12 - CLOSE expects a closure kind: CLOSE <relation> TRANSITIVE|SYMMETRIC|REFLEXIVE|EQUIVALENCE|SCC
      | CLOSE deps SIDEWAYS
      |            ^^^^^^^^
