crates/elenchus-parser/tests/snapshots/errors__exists_missing_in.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"PREMISE p:\\n    EXISTS h handlers\\n        h does x\\n\")"
---
RESULT: 1 syntax error

EXISTS  (1 problem)
  syntax  : EXISTS <binder> IN <set> (or WITNESS <term>)  then one condition line using the binder
  example : EXISTS h IN handlers
                h handles request
    line 2, col 13 - EXISTS: after the binder use `WITNESS <term>`, `IN <set>`, or end the line (an unwitnessed existential)
      |     EXISTS h handlers
      |             ^^^^^^^^^
