crates/elenchus-parser/tests/snapshots/errors__fact_missing_predicate.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"FACT lonely\\n\")"
---
RESULT: 1 syntax error

FACT  (1 problem)
  syntax  : FACT [<domain>.]<Subject> <predicate> [<object>]
  example : FACT socrates is human
    line 1, col 6 - FACT expects an atom: <Subject> <predicate> [<object>]
      | FACT lonely
      |      ^^^^^^
