crates/elenchus-parser/tests/snapshots/errors__import_unterminated_string.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"IMPORT \\\"physics.vrf\\n\")"
---
RESULT: 1 syntax error

IMPORT  (1 problem)
  syntax  : IMPORT "<path>" [AS <alias>]
  example : IMPORT "physics.vrf"
    line 1, col 8 - IMPORT expects a quoted path, e.g. IMPORT "physics.vrf"
      | IMPORT "physics.vrf
      |        ^^^^^^^^^^^^
